--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,6 +6,15 @@
   margin-left: 2%;
   margin-right: 2%;
   color: tomato;
+  transition: 1s;
+}
+.img{
+    width: 270px;
+    height: 150px;
+}
+.footer-anchor a i:hover{
+    transform: scale(1.2);
+    color: rgb(0, 0, 0);
 }
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .footer-anchor{
